[package]
name = "plc-compiler"
version = "0.4.1-dev"
authors = [
    "Ghaith Hachem <ghaith.hachem@gmail.com>",
    "Mathias Rieder <mathias.rieder@gmail.com>",
]
edition = "2021"
description = "IEC 61131-3 Structured Text compiler library"
readme = "README.md"
repository = "https://github.com/PLC-lang/rusty"
license = "LGPL-3.0"
keywords = ["iec61131", "st", "Structued_Text"]
categories = ["development-tools::build-utils"]

[features]
default = []
verify = []

[dependencies]
plc_source = { path = "./compiler/plc_source", version = "0.4.1-dev" }
plc_ast = { path = "./compiler/plc_ast", version = "0.4.1-dev" }
plc_util = { path = "./compiler/plc_util", version = "0.4.1-dev" }
plc_diagnostics = { path = "./compiler/plc_diagnostics", version = "0.4.1-dev" }
plc_index = { path = "./compiler/plc_index", version = "0.4.1-dev" }
section_mangler = { path = "./compiler/section_mangler", version = "0.4.1-dev" }
plc_llvm = { path = "./compiler/plc_llvm", version = "0.4.1-dev" }
logos = "0.12.0"
clap = { version = "3.0", features = ["derive"] }
indexmap = { version = "2.0", features = ["serde"] }
generational-arena = { version = "0.2.8", features = ["serde"] }
shell-words = "1.1.0"
plc_derive = { path = "./compiler/plc_derive", version = "0.4.1-dev" }
which = "4.2.5"
log.workspace = true
inkwell.workspace = true
chrono.workspace = true
itertools.workspace = true
anyhow.workspace = true
lazy_static.workspace = true
serde_json.workspace = true
serde.workspace = true
toml.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
num = "0.4"
insta.workspace = true
pretty_assertions = "1.3.0"
driver = { path = "./compiler/plc_driver/", package = "plc_driver", version = "0.4.1-dev" }
project = { path = "./compiler/plc_project/", package = "plc_project", version = "0.4.1-dev", features = [
    "integration",
] }
plc_xml = { path = "./compiler/plc_xml", version = "0.4.1-dev" }
test_utils = { path = "./tests/test_utils" }
plc_lowering = { path = "./compiler/plc_lowering", version = "0.4.1-dev" }
serial_test = "*"
tempfile = "3"
encoding_rs.workspace = true
encoding_rs_io.workspace = true
tabled = "0.20.0"

[lib]
name = "rusty"
path = "src/lib.rs"

[workspace]
members = [
    "xtask",
    "errorcode_book_generator",
    "libs/stdlib",
    "compiler/plc_driver",
    "compiler/plc_ast",
    "compiler/plc_diagnostics",
    "compiler/plc_project",
    "compiler/plc_source",
    "compiler/plc_util",
    "compiler/plc_xml",
    "compiler/plc_derive",
    "compiler/plc_index",
    "compiler/section_mangler",
    "compiler/plc_lowering",
    "compiler/plc_llvm",
    "compiler/plc_header_generator",
    "tests/test_utils",
]
default-members = [".", "compiler/plc_driver", "compiler/plc_xml"]

[workspace.dependencies]
inkwell = { version = "0.8", features = ["llvm21-1"] }
insta = { version = "1.31.0", features = ["filters"] }
encoding_rs = "0.8"
encoding_rs_io = "0.1"
log = "0.4"
chrono = { version = "0.4", default-features = false }
itertools = "0.11"
anyhow = "1.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
toml = "0.5"
rustc-hash = "1.1.0"
