[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[features]
default = []
sql = ["dep:sqlx"]

[dependencies]
xshell = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29"
anyhow = "1.0"
sqlx = { version = "0.7", features = [
    "runtime-async-std",
    "tls-native-tls",
    "mysql",
], optional = true }

async-std = "1.12.0"
tempfile = "3"
clap = { version = "4.3.10", features = ["derive"] }
plc = { path = "../", package = "rusty" }
plc_ast = { path = "../compiler/plc_ast" }
