[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[features]
default = []
sql = ["dep:sqlx"]

[dependencies]
xshell = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29"
anyhow = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-async-std",
    "tls-native-tls",
    "mysql",
], optional = true }

async-std = "1.12.0"
tempfile = "3"
clap = { version = "4.3.10", features = ["derive"] }
plc = { path = "../", package = "rusty" }
plc_ast = { path = "../compiler/plc_ast" }
plc_source = { path = "../compiler/plc_source" }
itertools.workspace = true
proc-macro2 = "1.0.106"
quote = "1.0.44"
either = "1.15.0"
ungrammar = "1.16.1"
