[package]
name = "xtask"
version = "1.1.0-dev"
edition = "2021"
publish = false

[features]
default = []
sql = ["dep:sqlx"]

[dependencies]
xshell = "0.2"
serde.workspace = true
serde_json.workspace = true
sysinfo = "0.37"
anyhow.workspace = true
sqlx = { version = "0.8", features = [
    "runtime-async-std",
    "tls-native-tls",
    "mysql",
], optional = true }

async-std = "1.12.0"
tempfile.workspace = true
clap = { version = "4.3.10", features = ["derive"] }
plc = { path = "../", package = "plc-compiler" }
plc_ast = { path = "../compiler/plc_ast" }
plc_source = { path = "../compiler/plc_source" }
