[package]
name = "plc_ast"
version = "0.4.1-dev"
edition = "2021"
license = "LGPL-3.0"
description = "AST types for the PLC Structured Text compiler"

[dependencies]
plc_util = { path = "../plc_util", version = "0.4.1-dev" }
plc_source = { path = "../plc_source", version = "0.4.1-dev" }
chrono = { version = "0.4", default-features = false }
# Enabled the RC feature (for Arc<T>) see: https://serde.rs/feature-flags.html#-features-rc
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json.workspace = true
derive_more = { version = "0.99.0", features = ["try_into"] }
rustc-hash.workspace = true
