[package]
name = "plc_ast"
version = "1.0.0"
edition = "2021"
license = "LGPL-3.0"
description = "AST types for the PLC Structured Text compiler"

[dependencies]
plc_util = { path = "../plc_util", version = "1.0.0" }
plc_source = { path = "../plc_source", version = "1.0.0" }
chrono.workspace = true
# Enabled the RC feature (for Arc<T>) see: https://serde.rs/feature-flags.html#-features-rc
serde = { workspace = true, features = ["rc"] }
serde_json.workspace = true
derive_more = { version = "1", features = ["try_into"] }
rustc-hash.workspace = true
