[package]
name = "plc_cfc"
version = "1.1.0-dev"
edition = "2024"

[dependencies]
# the ST parser: POU declarations (textDeclaration) and DataSource/DataSink expressions
plc = { path = "../..", package = "plc-compiler", version = "1.1.0-dev" }
ast = { path = "../plc_ast", package = "plc_ast", version = "1.1.0-dev" }
plc_source = { path = "../plc_source", version = "1.1.0-dev" }
plc_diagnostics = { path = "../plc_diagnostics", version = "1.1.0-dev" }
indexmap.workspace = true
serde.workspace = true
quick-xml = { version = "0.38", features = ["serialize", "serde-types", "overlapped-lists"] }

[dev-dependencies]
insta.workspace = true
