[package]
name = "plc_diagnostics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.11.1"
plc_ast = { path = "../plc_ast" }
plc_source = { path = "../plc_source" }
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
lazy_static.workspace = true
log.workspace = true
