[package]
name = "plc_diagnostics"
version = "0.5.0"
edition = "2021"
license = "LGPL-3.0"
description = "Diagnostics and error reporting for the PLC Structured Text compiler"

[dependencies]
codespan-reporting = "0.11.1"
plc_ast = { path = "../plc_ast", version = "0.5.0" }
plc_source = { path = "../plc_source", version = "0.5.0" }
serde_json.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
lazy_static.workspace = true
log.workspace = true
rustc-hash.workspace = true
