[package]
name = "plc_diagnostics"
version = "1.0.2"
edition = "2021"
license = "LGPL-3.0"
description = "Diagnostics and error reporting for the PLC Structured Text compiler"

[dependencies]
codespan-reporting = "0.12"
plc_ast = { path = "../plc_ast", version = "1.0.2" }
plc_source = { path = "../plc_source", version = "1.0.2" }
serde_json.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
lazy_static.workspace = true
log.workspace = true
rustc-hash.workspace = true
