[package]
name = "plc_driver"
version = "1.1.0-dev"
edition = "2021"
build = "build.rs"
license = "LGPL-3.0"
description = "IEC 61131-3 Structured Text compiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plc = { path = "../..", package = "plc-compiler", version = "1.1.0-dev" }
ast = { path = "../plc_ast/", package = "plc_ast", version = "1.1.0-dev" }
project = { path = "../plc_project/", package = "plc_project", version = "1.1.0-dev" }
source_code = { path = "../plc_source/", package = "plc_source", version = "1.1.0-dev" }
plc_cfc = { path = "../plc_cfc/", package = "plc_cfc", version = "1.1.0-dev" }
plc_diagnostics = { path = "../plc_diagnostics/", version = "1.1.0-dev" }
plc_index = { path = "../plc_index", version = "1.1.0-dev" }
plc_lowering = { path = "../plc_lowering", version = "1.1.0-dev" }
plc_header_generator = { path = "../plc_header_generator", version = "1.1.0-dev" }

serde.workspace = true
serde_json.workspace = true
toml.workspace = true
clap = { version = "3.0", features = ["derive"] }
rayon = "1.6.1"
tempfile.workspace = true
indexmap.workspace = true
env_logger = "0.11"
anstream.workspace = true
anstyle.workspace = true
log.workspace = true
encoding_rs.workspace = true
encoding_rs_io.workspace = true
anyhow.workspace = true
itertools.workspace = true
plc_util = { path = "../plc_util", version = "1.1.0-dev" }

[dev-dependencies]
pretty_assertions = "1.3.0"
insta.workspace = true


[lib]
name = "plc_driver"
path = "./src/lib.rs"

[[bin]]
name = "plc"
path = "./src/main.rs"

[package.metadata.deb]
name = "plc-compiler"
maintainer = "PLC-lang Project"
extended-description = """\
PLC is an IEC 61131-3 Structured Text compiler targeting LLVM. \
It compiles ST programs to native machine code for multiple platforms."""
section = "devel"
priority = "optional"
depends = "libc6"
recommends = "plc-stdlib"
assets = [
    ["target/release/plc", "usr/bin/", "755"],
    ["../../compiler/plc_project/schema/plc-json.schema", "usr/share/plc/schema/", "644"],
    ["../../scripts/debian/plc-compiler/copyright", "usr/share/doc/plc-compiler/", "644"],
]
