[package]
name = "plc_header_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
plc = { path = "../..", package = "rusty" }
plc_diagnostics = { path = "../plc_diagnostics/" }
plc_ast = { path = "../plc_ast/" }
plc_source = { path = "../plc_source/" }
tera = "1"
clap = { version = "3.0", features = ["derive"] }
regex = "1"
once_cell = "1.21.3"
log.workspace = true
serde_json.workspace = true
serde.workspace = true

[dev-dependencies]
insta.workspace = true
