[package]
name = "plc_index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plc_ast = { path = "../plc_ast" }
plc_source = { path = "../plc_source" }
plc_diagnostics = { path = "../plc_diagnostics" }
#plc_project = { path = "../plc_project" } # TODO: This will create a circular dependency
rustc-hash.workspace = true
annotate-snippets = "0.11.5"
encoding_rs = "0.8"
serde_json.workspace = true
serde.workspace = true
