[package]
name = "plc_index"
version = "0.3.1"
edition = "2021"
license = "LGPL-3.0"
description = "Symbol index and type system for the PLC Structured Text compiler"

[dependencies]
plc_ast = { path = "../plc_ast", version = "0.3.1" }
plc_source = { path = "../plc_source", version = "0.3.1" }
plc_diagnostics = { path = "../plc_diagnostics", version = "0.3.1" }
#plc_project = { path = "../plc_project" } # TODO: This will create a circular dependency
rustc-hash.workspace = true
annotate-snippets = "0.11.5"
encoding_rs = "0.8"
serde_json.workspace = true
serde.workspace = true
