[package]
name = "plc_index"
version = "1.0.3"
edition = "2021"
license = "LGPL-3.0"
description = "Symbol index and type system for the PLC Structured Text compiler"

[dependencies]
plc_ast = { path = "../plc_ast", version = "1.0.3" }
plc_source = { path = "../plc_source", version = "1.0.3" }
plc_diagnostics = { path = "../plc_diagnostics", version = "1.0.3" }
#plc_project = { path = "../plc_project" } # TODO: This will create a circular dependency
rustc-hash.workspace = true
encoding_rs.workspace = true
annotate-snippets = "0.12"
serde_json.workspace = true
serde.workspace = true

[dev-dependencies]
insta.workspace = true
