[package]
name = "plc_lowering"
version = "1.0.4-dev"
edition = "2021"
license = "LGPL-3.0"
description = "AST lowering passes for the PLC Structured Text compiler"

[dependencies]
plc = { path = "../..", package = "plc-compiler", version = "1.0.4-dev" }
plc_ast = { path = "../plc_ast", version = "1.0.4-dev" }
plc_source = { path = "../plc_source", version = "1.0.4-dev" }
plc_diagnostics = { path = "../plc_diagnostics", version = "1.0.4-dev" }
log.workspace = true
itertools.workspace = true

[dev-dependencies]
plc_driver = { path = "../plc_driver", version = "1.0.4-dev" }
insta.workspace = true
