[package]
name = "plc_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.0"
logos = "0.12.0"
log.workspace = true
plc_ast = { path = "../plc_ast" }
plc_source = { path = "../plc_source" }
plc_diagnostics = { path = "../plc_diagnostics" }
plc_util = { path = "../plc_util" }