[package]
name = "plc_parser"
version = "1.1.0-dev"
edition = "2021"
license = "LGPL-3.0"
description = "Lexer and parser for the PLC Structured Text compiler"

[dependencies]
plc_ast = { path = "../plc_ast", version = "1.1.0-dev" }
plc_diagnostics = { path = "../plc_diagnostics", version = "1.1.0-dev" }
plc_source = { path = "../plc_source", version = "1.1.0-dev" }
plc_util = { path = "../plc_util", version = "1.1.0-dev" }
indexmap.workspace = true
logos.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions = "1.3.0"
rustc-hash.workspace = true
