[package]
name = "plc_project"
version = "0.3.1"
edition = "2021"
license = "LGPL-3.0"
description = "Project configuration and file resolution for the PLC Structured Text compiler"

[dependencies]
plc = { path = "../..", package = "plc-compiler", version = "0.3.1" }
plc_diagnostics = { path = "../plc_diagnostics/", version = "0.3.1" }
source_code = { path = "../plc_source/", package = "plc_source", version = "0.3.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
regex = "1"
jsonschema = "0.17"
encoding_rs.workspace = true
encoding_rs_io.workspace = true
glob = "*"
anyhow.workspace = true

[dev-dependencies]
insta = "1.31.0"

[features]
integration = []
