[package]
name = "plc_project"
version = "0.5.0"
edition = "2021"
license = "LGPL-3.0"
description = "Project configuration and file resolution for the PLC Structured Text compiler"

[dependencies]
plc = { path = "../..", package = "plc-compiler", version = "0.5.0" }
plc_diagnostics = { path = "../plc_diagnostics/", version = "0.5.0" }
source_code = { path = "../plc_source/", package = "plc_source", version = "0.5.0" }
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
jsonschema = "0.17"
encoding_rs.workspace = true
encoding_rs_io.workspace = true
glob.workspace = true
anyhow.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true

[features]
integration = []
