[package]
name = "plc_source"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs.workspace = true
encoding_rs_io.workspace = true
serde_json.workspace = true
serde.workspace = true

[dev-dependencies]
insta = "1.31.0"

[lib]
name = "plc_source"
path = "./src/lib.rs"
