[package]
name = "plc_source"
version = "0.3.1"
edition = "2021"
license = "LGPL-3.0"
description = "Source file handling for the PLC Structured Text compiler"

[dependencies]
encoding_rs.workspace = true
encoding_rs_io.workspace = true
serde_json.workspace = true
serde.workspace = true

[dev-dependencies]
insta = "1.31.0"

[lib]
name = "plc_source"
path = "./src/lib.rs"
