[package]
name = "plc_xml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12"
quick-xml = { version = "0.30", features = ["serialize"] }
insta = "1.20"
indexmap = "2.0"
html-escape = "0.2"
plc = { path = "../..", package = "rusty" }
ast = { path = "../plc_ast/", package = "plc_ast" }
plc_diagnostics = { path = "../plc_diagnostics" }
plc_source = { path = "../plc_source" }
itertools.workspace = true
rustc-hash.workspace = true

[features]
default = []
debug = []
