[package]
name = "plc_xml"
version = "0.3.0"
edition = "2021"
license = "LGPL-3.0"
description = "CFC/FBD XML format support for the PLC Structured Text compiler"

[dependencies]
logos = "0.12"
quick-xml = { version = "0.30", features = ["serialize"] }
insta = "1.20"
indexmap = "2.0"
html-escape = "0.2"
plc = { path = "../..", package = "plc-compiler", version = "0.3.0" }
ast = { path = "../plc_ast/", package = "plc_ast", version = "0.3.0" }
plc_diagnostics = { path = "../plc_diagnostics", version = "0.3.0" }
plc_source = { path = "../plc_source", version = "0.3.0" }
itertools.workspace = true
rustc-hash.workspace = true

[features]
default = []
debug = []
