[package]
name = "plc_xml"
version = "1.1.0-dev"
edition = "2021"
license = "LGPL-3.0"
description = "CFC/FBD XML format support for the PLC Structured Text compiler"

[dependencies]
logos.workspace = true
quick-xml = { version = "0.30", features = ["serialize"] }
insta.workspace = true
indexmap.workspace = true
html-escape = "0.2"
plc = { path = "../..", package = "plc-compiler", version = "1.1.0-dev" }
plc_parser = { path = "../plc_parser", version = "1.1.0-dev" }
ast = { path = "../plc_ast/", package = "plc_ast", version = "1.1.0-dev" }
plc_diagnostics = { path = "../plc_diagnostics", version = "1.1.0-dev" }
plc_source = { path = "../plc_source", version = "1.1.0-dev" }
itertools.workspace = true
rustc-hash.workspace = true

[features]
default = []
debug = []
