[package]
name = "lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = "0.7.4"
lsp-types = "0.94.1"
plc_driver = { path = "../../compiler/plc_driver" }
plc_diagnostics = { path = "../../compiler/plc_diagnostics" }
plc_source = { path = "../../compiler/plc_source" }
serde = "1.0.188"
serde_json = "1.0.107"
