[package]
name = "iec61131std"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
glob = "0.3"

[build-dependencies.plc_driver]
path = "../../compiler/plc_driver"




[dev-dependencies.plc_driver]
path = "../../compiler/plc_driver"

[dev-dependencies.plc_source]
path = "../../compiler/plc_source"

[dev-dependencies.plc]
package = "rusty"
path = "../.."


[dependencies]
chrono = "0.4"
num = "0.4"
paste = "1.0.8"
log = "0.4"

[dev-dependencies]
libloading = "0.9"
tempfile = "3"
cc = "1"

[features]
default = []
mock_time = []
debug = []

[lib]
crate-type = ["staticlib", "lib", "cdylib"]
