[package]
name = "iec61131std"
version = "0.5.0"
edition = "2021"
license = "LGPL-3.0"
description = "IEC 61131-3 standard library implementation"

[build-dependencies]
glob = "0.3"

[build-dependencies.plc_driver]
path = "../../compiler/plc_driver"
version = "0.5.0"


[dev-dependencies.plc_driver]
path = "../../compiler/plc_driver"
version = "0.5.0"

[dev-dependencies.plc_source]
path = "../../compiler/plc_source"
version = "0.5.0"

[dev-dependencies.plc]
package = "plc-compiler"
path = "../.."
version = "0.5.0"


[dependencies]
chrono = "0.4"
num = "0.4"
paste = "1.0.8"
log = "0.4"

[dev-dependencies]
libloading = "0.9"
tempfile = "3"
cc = "1"

[features]
default = []
mock_time = []
debug = []

[lib]
crate-type = ["staticlib", "lib", "cdylib"]
