[package]
name = "iec61131std"
version = "1.0.1"
edition = "2021"
license = "LGPL-3.0"
description = "IEC 61131-3 standard library implementation"

[build-dependencies]
glob.workspace = true

[build-dependencies.plc_driver]
path = "../../compiler/plc_driver"
version = "1.0.1"


[dev-dependencies.plc_driver]
path = "../../compiler/plc_driver"
version = "1.0.1"

[dev-dependencies.plc_source]
path = "../../compiler/plc_source"
version = "1.0.1"

[dev-dependencies.plc]
package = "plc-compiler"
path = "../.."
version = "1.0.1"


[dependencies]
chrono = "0.4"
num = "0.4"
paste = "1.0.8"
log = "0.4"

[dev-dependencies]
libloading = "0.9"
tempfile.workspace = true
cc.workspace = true

[features]
default = []
mock_time = []
debug = []

[lib]
crate-type = ["staticlib", "lib", "cdylib"]
